name:                relevant-time
version:             0.1.0.0
synopsis:            humanised relevant time
-- description:         
homepage:            https://github.com/chessai/relevant-time.git
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.RelevantTime
  -- other-modules:       
  other-extensions:    LambdaCase, OverloadedStrings
  build-depends:       base >=4.7 && <5.0
                     , aeson
                     , chronos
                     , text
                     , torsor
  -- hs-source-dirs:      
  default-language:    Haskell2010
